Bank accounts CRUD app update